--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,16 +12,18 @@ jobs:
   test-nocache:
     strategy:
       matrix:
-        go-version: stable
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v5
     - uses: actions/setup-go@v6
       with:
-        go-version: ${{ matrix.go-version }}
-        cache: false
-    - run: go test -v -race -covermode=atomic -coverprofile="coverage.out" ./...
+        go-version: stable
+        cache: false # no point in caching if go.sum is absent
+
+    - name: Run tests with coverage
+      shell: cmd
+      run: go test -v -race -covermode=atomic -coverprofile="coverage.out" ./...
 
     - name: Upload coverage to Coveralls
       uses: coverallsapp/github-action@v2
